feat: get chat model name from `.env`

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Settings for OpenAI
-OPENAI_API_KEY=""
+CHAT_MODEL="gpt-4o"
+OPENAI_API_KEY="sk-xxxxx"
 # Optionally change the OPENAI_API_BASE if you not use the default one
 # OPENAI_API_BASE=""
 
