--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # Settings for OpenAI
 CHAT_MODEL="gpt-4o"
 OPENAI_API_KEY="sk-xxxxx"
-# Optionally change the OPENAI_API_BASE if you not use the default one
-# OPENAI_API_BASE=""
+# Optionally change the OPENAI_BASE_URL if you not use the default one
+# OPENAI_BASE_URL=""
 
 # Settings for Tavily
 TAVILY_API_KEY=""
