--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "A Deep Research Replica built with LangChain and LangGraph."
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "fastapi>=0.115.12",
     "httpx[socks]>=0.28.1",
     "inquirerpy>=0.3.4",
     "langchain-core>=0.3.51",
@@ -17,6 +18,7 @@ dependencies = [
     "pandas>=2.2.3",
     "python-dotenv>=1.1.0",
     "readabilipy>=0.3.0",
+    "uvicorn>=0.34.0",
     "yfinance>=0.2.55",
 ]
 
