--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "langgraph>=0.3.25",
     "langgraph-supervisor>=0.0.16",
     "markdownify>=1.1.0",
+    "nanoid>=2.0.0",
     "numpy>=2.2.4",
     "pandas>=2.2.3",
     "python-dotenv>=1.1.0",
